--- a/css/custom.css
+++ b/css/custom.css
@@ -20,33 +20,63 @@
 header{
     font-family:  "brandon-grotesque", Helvetica, Arial, sans-serif;
     font-weight:bold;
+    /*position: fixed;
+    width:100%;
+    border-bottom:2px solid black;*/
 }
-ul{
-    list-style-type: none;
+.topnav{
     padding: 2% 4% 0 0;
     overflow: hidden;
 }
-#headerli{
-    float:right;
-}
-li a {
+.topnav a {
     display: block;
     color: grey;
     text-align: center;
     padding: 15px 20px;
     text-decoration: none;
     font-size:1em;
+    float:right;
 }
-li a:hover{
+.topnav a:hover{
     background-color: #111; 
     text-decoration: none;
     color:white;
 }
 
-#name{
+.topnav .icon {
+    display: none;
+}
+/*Header Responsive*/
+@media screen and (max-width: 600px) {
+  .topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: center;
+    margin:auto;
+    width:100px;
+
+  }
+}
+
+.name{
     font-size: 6em;
     font-weight: bold;
-    font-family: "ProximaNovaA-Extrabld", Arial, sans-serif;
+    font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
+    /*"ProximaNovaA-Extrabld", Arial, sans-serif;*/
+    /*"proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;*/
     padding-top: 9%;
     color:white;
 }
@@ -62,6 +92,10 @@ li a:hover{
     font-size:1.5em;
 }
 /*About*/
+/*#aboutSection{
+    padding:0 2px 2px 2px;
+    margin:0 2px 2px 2px;
+}*/
 #buttons{               
     text-align:center;
     font-size:1.4em;
@@ -79,7 +113,7 @@ li a:hover{
     font-size:130%;
     font-family:" ff-meta-serif-web-pro", Georgia, serif;
     color:grey;
-    line-height: 150%
+    line-height:150%;
 }
 .about_details {
     color: #000731;
@@ -91,48 +125,108 @@ li a:hover{
     max-width:1000px;
 }
 /*Projects*/
-.project {
-    background-color: black;
+#projectHead{
+    color:white;
+    text-align:center;
+    font-family:'Montserrat';
+    font-weight:bold;
+    padding:5% 0 5% 0;
+    font-size:1.4em;
+}
+/*overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+.container:hover .overlay {
+  height: 100%;
+}*/
+#project {
+    /*background-image:url("./../img/hmk6.jpg");
+    background-repeat: no-repeat;
+    background-color: #ffffff;
+    background-position: center;
+    background-size: cover;
+    position: relative;*/
+    background-color:#191919;
     padding-bottom: 4%;
 }
-#project_image {
-    margin-left: 30%;
+#project_image1, #project_image2 {
+    margin-left:20%;
     width:auto;
-    height: 350px;
+    height: auto;
 }
 
-.Contact {
-    background-color:#706d6d;
+/*Contact*/
+#contact {
     margin: 0 0 0 0;
-    padding: 0 0 4% 0;
+    padding: 4% 0 4% 0;
     text-align: center;
     font-weight: bold;
-    color: white;
+    color: grey;
+    /*background-color: #ff3200;*/
 }
-
 #social_icon {
-    font-size: 2em;
-    color: white;
+    font-size: 1.4em;
+    color: grey;
     border-radius: 50%;
-    border: 2px solid white;
-    padding: 10px;
+    border: 2px solid grey;
+    padding:10px;    
 }
-
 #social_icon:hover {
-    background-color: white;
+    background-color: #e55102;
     border-radius: 50%;
-    /*border: 2px solid black;*/
-    margin: 0 -3% 0 -3%;
-    color: black;
+    border: 2px solid #e55102;
+   /* margin: 0 -3% 0 -3%;*/
+    color: white;
     padding: 10px;
 }
-
-@media only screen and (max-width:500px) {
-    li {
-        padding: 2% 1% 2% 1%;
-        font-size: 5px;
-    }
-    a:hover {
-        padding: .5% 1% .5% 1%;
-    }
+.contmail1{
+    margin-top:10px;
+   /* padding-bottom:30px;*/
+}
+ .contmail2{
+    margin-top: 10px;
+    /*padding-top: 30px;*/
+ }
+.contactmail{
+    text-decoration: none;
+    color:#e55102;
+    font-size: 100%;
+    font-family:"brandon-grotesque", Helvetica, Arial, sans-serif;
+    /*font-weight:bold;*/
+}
+.contactmail:hover{
+    text-decoration:none;
+    color:#e55102;
+}
+@media only screen and (max-width: 1000px) {
+    .contmail1{
+    padding-bottom:30px;
+}
+ .contmail2{
+    padding-top: 30px;
+ }
+}
+@media only screen and (max-width: 600px) {
+   .name{
+    font-size: 4em;
+    padding-top: 18%;
+   }
+   #detail{
+    font-size:1.5em;
+   }
+   #subdetail{
+    font-size:1.2em;
+   }
+   #aboutMe{
+    /*font-size:130%;*/
+    line-height:130%;
+}
 }
